hphp/hack/test/typecheck/reactive/varray_as_field.php.exp
File "varray_as_field.php", line 9, characters 3-9:
This object's property is being mutated(used as an lvalue)
You cannot set non-mutable object properties in reactive functions (Typing[4202])
